--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,14 +3,16 @@ layout: default
 ---
 
 <article class="post">
-  <h1>{{ page.title }}</h1>
-
-  <div class="date">
-    {{ page.date | date: "%B %e, %Y" }}
+  <div class="title">
+    {{ page.title }}
   </div>
 
   <div class="entry">
     {{ content }}
+  </div>
+
+  <div class="date">
+    {{ page.date | date: "%B %e, %Y" }}
   </div>
 
 </article>
