--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="post">
   <div class="title">
-    {{ page.title }}
+    <h4>{{ page.title }}</h4>
   </div>
 
   <div class="entry">
