--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="page">
   
-  <h4>{{ page.title }}</h4>
+  <strong>{{ page.title }}</strong>
 
   <div class="entry">
     {{ content }}
