--- a/style.scss
+++ b/style.scss
@@ -163,22 +163,22 @@ img {
   }
 }
 
-.site-avatar {
-  float: left;
-  width: 70px;
-  height: 70px;
-  margin-right: 15px;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
-
-  img {
-    border-radius: 5px;
-  }
-}
+//.site-avatar {
+//  float: left;
+//  width: 70px;
+// height: 70px;
+//  margin-right: 15px;
+//
+//  @include mobile {
+//    float: none;
+//    display: block;
+//    margin: 0 auto;
+//  }
+//
+//  img {
+//    border-radius: 5px;
+//  }
+//}
 
 .site-info {
   float: left;
@@ -261,9 +261,9 @@ nav {
     font-style: italic;
   }
 
-  .comments {
-    margin-top: 10px;
-  }
+//  .comments {
+//    margin-top: 10px;
+//  }
 
   .read-more {
     text-transform: uppercase;
