--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
 
     <meta name="author" content="{{ site.name }}" />
-    <meta name="description" content="{{ site.description }}">
+    <!--meta name="description" content="{{ site.description }}"-->
 
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -27,12 +27,12 @@
           <!--<a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>-->
           
           <div class="site-info">
-            <strong class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></strong>
-            <p class="site-description">{{ site.description }}</p>
+            <strong class="site-name">{{ site.name }}</strong>
+            <!--p class="site-description">{{ site.description }}</p-->
           </div>
           
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/">Posts</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
