--- a/style.scss
+++ b/style.scss
@@ -193,7 +193,7 @@ img {
 .site-name {
   margin: 0;
   color: $darkGray;
-  cursor: pointer;
+//  cursor: pointer;
   font-family: $helveticaNeue;
   font-weight: 300;
   font-size: 28px;
